--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <h1>Welcome to the Weather App</h1>
 
-    <footer>Built by Najah Mahmaud</footer>
+    <footer>Built by
+        <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
+            href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and website hosted on <a
+            href="https://weather-app-shecodes-project.netlify.app/" target="_blank"> Netlify</a>
+    </footer>
 </body>
 
 </html>
