styled the main container

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="src/index.css">
     <title>Weather App</title>
 </head>
 
 <body>
-    <h1>Welcome to the Weather App</h1>
+    <div class="weather-app">
+        <h1>Welcome to the Weather App</h1>
 
-    <footer>Coded by
-        <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
-            href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
-            href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
-    </footer>
+        <footer>Coded by
+            <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
+                href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
+                href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
+        </footer>
+        
+    </div>
 </body>
 
 </html>
