--- a/index.html
+++ b/index.html
@@ -4,48 +4,42 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="src/style.css" />
-    <title>Meteo App</title>
+    <link rel="stylesheet" href="src/index.css">
+    <title>Weather App</title>
 </head>
 
 <body>
-    <div class="weather-app">
-        <header>
-            <form class="search-form">
-                <input type="search" placeholder="Enter a city.." required class="search-form-input" />
-                <input type="submit" value="Search" class="search-form-button" />
-            </form>
-        </header>
-        <main>
-            <div class="weather-app-data">
-                <div>
-                    <h1 class="weather-app-city">Paris</h1>
-                    <p class="weather-app-details">
-                        Tuesday 14:49, scattered clouds
-                        <br />
-                        Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
-                    </p>
-                </div>
-                <div class="weather-app-temperature-container">
-                    <div class="weather-app-icon">🌤️</div>
-                    <div class="weather-app-temperature">12</div>
-                    <div class="weatehr-app-unit">°C</div>
-                </div>
+    <div class="weather-app"></div>
+    <header>
+        <form class="search-form">
+            <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+            <input type="submit" value="search" class="search-form-button" />
+        </form>
+    </header>
+    <main>
+        <div class="weather-app-data">
+            <div>
+                <h1 class="weather-app-city">Stockholm</h1>
+                <p class="weather-app-details">
+                    Tuesday 14:49, scattered clouds
+                    <br />
+                    Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+                </p>
             </div>
-        </main>
+            <div class="weather-app-temperature-container">
+                <div class="weather-app-icon">🌤️</div>
+                <div class="weather-app-temperature">12</div>
+                <div class="weatehr-app-unit">°C</div>
+            </div>
+        </div>
+    </main>
 
-        <footer>Coded by
-            <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
-                href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
-                href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
-        </footer>
 
-
+    <footer>Coded by
+        <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
+            href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
+            href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
+    </footer>
 </body>
 
 </html>
