--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
             href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
+    <script src="src/index.js">
+
+    </script>
 </body>
 
 </html>
