--- a/index.html
+++ b/index.html
@@ -5,46 +5,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/index.css">
-    <script src="http//cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather App</title>
 </head>
 
 <body>
-    <div class="weather-app"></div>
-    <header>
-        <form class="search-form" id="search-form">
-            <input type="search" placeholder="Enter a city.." required id="search-form-input"
-                class="search-form-input" />
-            <input type="submit" value="search" class="search-form-button" />
-        </form>
-    </header>
-    <main>
-        <div class="weather-app-data">
-            <div>
-                <h1 class="weather-app-city" id="city">Stockholm</h1>
-                <p class="weather-app-details">
-                    Tuesday 14:49, scattered clouds
-                    <br />
-                    Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
-                </p>
+    <div class="weather-app">
+        <header>
+            <form class="search-form" id="search-form">
+                <input type="search" placeholder="Enter a city.." required id="search-form-input"
+                    class="search-form-input" />
+                <input type="submit" value="Search" class="search-form-button" />
+            </form>
+        </header>
+        <main>
+            <div class="weather-app-data">
+                <div>
+                    <h1 class="weather-app-city" id="city"></h1>
+                    <p class="weather-app-details">
+                        Tuesday 14:49, scattered clouds
+                        <br />
+                        Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+                    </p>
+                </div>
+                <div class="weather-app-temperature-container">
+                    <div class="weather-app-icon">🌤️</div>
+                    <div class="weather-app-temperature" id="temperature"></div>
+                    <div class="weatehr-app-unit">°C</div>
+                </div>
             </div>
-            <div class="weather-app-temperature-container">
-                <div class="weather-app-icon">🌤️</div>
-                <div class="weather-app-temperature">12</div>
-                <div class="weatehr-app-unit">°C</div>
-            </div>
-        </div>
-    </main>
+        </main>
 
 
-    <footer>Coded by
-        <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
-            href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
-            href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
-    </footer>
-    <script src="src/index.js">
+        <footer>This project was coded by
+            <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
+                href="https://github.com/NajahMahmaud/Weather" target="_blank">Github</a> and <a
+                href="https://weather-app-shecodes-project.netlify.app/" target="_blank">hosted on Netlify</a>
+        </footer>
+        <script src="src/index.js">
 
-    </script>
+        </script>
 </body>
 
 </html>
