greated a new function on forcecast.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
                 <input type="submit" value="Search" class="search-form-button" />
             </form>
         </header>
-
-
-
         <main>
             <div class="weather-app-data">
                 <div>
@@ -36,7 +33,7 @@
                 <div class="weather-app-temperature-container">
                     <div id="icon"></div>
                     <div class="weather-app-temperature" id="temperature"></div>
-                    <div class="weatehr-app-unit">°C</div>
+                    <div class="weather-app-unit">°C</div>
                 </div>
             </div>
             <div class="weather-forecast" id="forecast"></div>
