--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/index.css">
+    <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather App</title>
 </head>
@@ -38,6 +39,7 @@
             </div>
             <div class="weather-forecast" id="forecast"></div>
         </main>
+
 
         <footer>This project was coded by
             <a href="https://github.com/NajahMahmaud" target="_blank">Najah Mahmaud</a>, code hosted on <a
